--- a/main.css
+++ b/main.css
@@ -28,15 +28,30 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 90px;
+  height: 120px;
   background: transparent;
-  padding: 0px 50px;
+  padding: 0px 40px;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
   transition: 0.7s;
   z-index: 1000;
+}
+.additionalbar {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.additionalbar li:hover {
+  box-shadow: 0 0 20px rgba(53, 76, 205, 0.5);
+  padding: 0.3rem;
+  margin-bottom: 1rem;
+  transform: scale(1.12);
+  background: linear-gradient(to top, rgb(173, 175, 230), #55eedc);
+  transition: all 0.5s ease-in-out;
+  border-radius: 10px;
 }
 
 .navbar:hover,
@@ -47,9 +62,12 @@ body {
 }
 
 .navbar ul {
+  /* align-items: center;
+  justify-content: center; */
   margin: 0;
   padding: 0;
   display: flex;
+  gap: 0.2rem;
 }
 
 .navbar ul li {
@@ -57,7 +75,7 @@ body {
 }
 
 .navbar ul li a {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: white;
   padding: 0 12px;
   font-size: 0.8em;
@@ -111,7 +129,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 125vh;
+  height: 90vh;
   overflow: hidden;
 }
 
@@ -121,30 +139,43 @@ section {
   object-fit: cover;
   filter: brightness(85%);
 }
-
 .videobg h2 {
   position: absolute;
-  top: 81.2%;
+  top: 73.2%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
   color: white;
-  font-size: 30px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 600;
+  font-size: 25px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
 }
 
+.videobg .main_button {
+  position: absolute;
+  top: 84%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+.audioicon {
+  position: absolute;
+  left: 3%;
+  font-size: 16px;
+  top: 90%;
+}
+.audioicon1 {
+  position: absolute;
+  right: 3%;
+  top: 90%;
+  font-size: 16px;
+}
 
 .videobg button {
-  position: absolute;
-  top: 91%;
-  left: 50%;
-
-  transform: translate(-50%, -50%);
-  z-index: 1;
+  max-width: 20rem;
   color: white;
 
-  padding: 15px 40px;
+  padding: 15px 60px;
   font-size: 15px;
   font-weight: 100;
   background-color: rgba(0, 0, 0, 0.3);
@@ -153,10 +184,10 @@ section {
   border-radius: 30px;
   cursor: pointer;
   transition: 0.2s;
+  margin: 0 5px;
 }
 
 .videobg button:hover {
-  /* border: 2px solid whitesmoke; */
   box-shadow: inset 0 0 0 1px white;
 }
 
@@ -171,10 +202,23 @@ section {
 
   /* background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7)), url('assets/Hero\ Pages/i1.jpg'); */
 
-  background-image: linear-gradient(to bottom, transparent 50%, rgba(0, 0, 0, 0.85)), url('assets/Hero\ Pages/i1.jpg');
+  background-image: linear-gradient(
+      to bottom,
+      transparent 50%,
+      rgba(0, 0, 0, 0.85)
+    ),
+    url("assets/Hero\ Pages/1st image of page.webp");
 
   background-size: cover;
   background-position: center;
+}
+#image2 {
+  background-image: linear-gradient(
+      to bottom,
+      transparent 50%,
+      rgba(0, 0, 0, 0.85)
+    ),
+    url("assets/Hero\ Pages/webpagesecondimage.webp");
 }
 
 .imagebg h2 {
@@ -184,8 +228,9 @@ section {
   transform: translate(-50%, -50%);
   z-index: 1;
   color: white;
-  font-size: 30px;
-  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
 }
 
 .imagebg button {
@@ -209,11 +254,11 @@ section {
   box-shadow: inset 0 0 0 1px white;
 }
 
-.services h2{
-  font-family: 'Poppins';
+.services h2 {
+  font-family: "Poppins";
   font-weight: 500;
   color: black;
-  font-size:large;
+  font-size: large;
   margin-top: 80px;
   margin-bottom: 40px;
 }
@@ -221,8 +266,8 @@ section {
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-  max-width: 120rem;
+  gap: 25px;
+  max-width: 140rem;
   margin: 0 auto;
   padding: 0 4.5rem;
   align-items: start;
@@ -230,22 +275,35 @@ section {
 }
 
 .grid-item {
+  position: relative;
+  max-width: 140rem;
   background-color: white;
   overflow: hidden;
   cursor: pointer;
 }
 
 .card-image {
+  object-fit: cover;
   display: block;
   width: 100%;
-  height: 16rem;
+  height: 28rem;
+  object-fit: cover;
+  max-width: 140rem;
+}
+
+.card img {
+  transform-origin: center;
+  transform: perspective(800px) rotateY(15deg);
+  transition: 0.6s ease-in-out;
+  box-shadow: 0px 0px 8px grey;
+  border-radius: 10px;
   object-fit: cover;
 }
 
-.card-content {
-  text-align: left;
+.card img:hover {
+  transform: perspective(800px) rotateY(0deg);
+  opacity: 1;
 }
-
 .card-content h1 {
   font-family: jost;
   color: black;
@@ -261,6 +319,7 @@ section {
   margin-right: 1.7rem;
   font-weight: 500;
   color: black;
+  margin-bottom: 2rem;
 }
 
 .card-btn {
@@ -268,53 +327,55 @@ section {
   color: black;
   border: none;
   font-size: 0.9rem;
-  font-weight: 100;
+  font-weight: 600;
   text-decoration: underline;
   text-underline-offset: 6px;
   background-color: transparent;
   cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-decoration: underline;
 }
 
 .container {
+  justify-content: center;
+  padding: 0 5rem;
+  margin-top: 2.5rem;
   display: flex;
-  /* align-items: flex-start; */
+  justify-content: space-around;
 }
 
 .column {
-  flex: 1;
-  /* padding: 30px; */
-  /* margin: 0 auto; */
   padding: 0 4.5rem;
   text-align: left;
-  
 }
 
 .cell {
+  max-width: 20 rem;
   font-family: jost_light;
   color: black;
   margin-bottom: 10px;
   padding: 5px;
-  font-size: 14px;
-  /* font-weight: 500; */
-  
+  font-size: 13px;
+  opacity: 0.9;
 }
 
-a.links{
+a.links {
   color: inherit;
   text-decoration: none;
 }
 
-span{
+span {
   /* text-decoration-color: grey; */
   text-decoration: underline;
   text-underline-offset: 4px;
 }
 
-.cell-head{
+.cell-head {
   font-size: 12px;
   font-weight: 600;
 }
-
 
 .footer {
   display: flex;
@@ -362,32 +423,43 @@ span{
   text-decoration-thickness: 1px;
   text-underline-offset: 6px;
 }
+.cell1 {
+  font-size: 12px;
+  margin: 3rem 4.5rem;
+  opacity: 0.5;
+  line-height: 1.3 rem;
+}
+.cell1 p {
+  max-width: 30rem;
+}
+.cell2 {
+  width: 10rem;
+  line-height: 1.5rem;
+}
 
-.last-logo{
+.last-logo {
   margin-top: 45px;
   margin-bottom: 50px;
-  font-family: saveurSans ;
+  font-family: saveurSans;
   font-size: 1.3em;
   text-align: center;
 }
 
-.accordian-container{
+.accordian-container {
   display: none;
 }
-.hr-hid{
-  display: none;
-}
-
-.mobile-footer{
+.hr-hid {
   display: none;
 }
 
-
+.mobile-footer {
+  display: none;
+}
 
 /* =====================MEDIUM DEVICES===== */
 
 @media screen and (max-width: 1024px) {
-   .container{
+  .container {
     margin-right: 4.5rem;
   }
   .column {
@@ -408,17 +480,16 @@ span{
 /* =====================SMALL DEVICES===== */
 
 @media screen and (max-width: 600px) {
-
-  body{
+  body {
     width: 120vh;
   }
 
-  .videobg{
+  .videobg {
     height: 225vh;
     width: 125vh;
   }
 
-  .imagebg{
+  .imagebg {
     height: 225vh;
     width: 125vh;
   }
@@ -429,7 +500,7 @@ span{
     font-weight: 550;
     white-space: nowrap;
   }
-  
+
   .videobg button {
     font-family: jost_light;
     top: 91%;
@@ -443,19 +514,19 @@ span{
     border: 2px solid white;
   }
 
-  #h2-1-imagebg{
+  #h2-1-imagebg {
     font-family: jost_light;
     top: 72%;
     font-size: 3.5rem;
     white-space: nowrap;
   }
-  #h2-2-imagebg{
+  #h2-2-imagebg {
     font-family: jost_light;
     top: 77%;
     font-size: 3.5rem;
     white-space: nowrap;
   }
-  
+
   .imagebg button {
     font-family: jost_light;
     top: 89%;
@@ -470,10 +541,10 @@ span{
     border: 2px solid white;
   }
 
-  .services{
+  .services {
     width: 125vh;
   }
-  .grid{
+  .grid {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   }
 
@@ -495,38 +566,37 @@ span{
     font-size: 2rem;
   }
 
-
   .column {
     flex-direction: row;
     padding: 0 1rem;
   }
 
-  .links{
+  .links {
     display: none;
   }
-  .footer{
+  .footer {
     display: none;
   }
 
-  .last-logo{
+  .last-logo {
     width: 125vh;
   }
 
-  .hr{
+  .hr {
     width: 125vh;
   }
 
-  .hr-hid{
+  .hr-hid {
     display: block;
     margin-left: 4.5rem;
     width: 104vh;
   }
 
-  .last-logo{
+  .last-logo {
     font-size: 3rem;
   }
 
-  .accordian-container{
+  .accordian-container {
     display: contents;
   }
 
@@ -542,28 +612,29 @@ span{
     border: none;
     text-align: left;
     outline: none;
-    font-size:  2.4rem;
+    font-size: 2.4rem;
     transition: 0.4s;
   }
-  
-  .active, .accordion:hover {
+
+  .active,
+  .accordion:hover {
     background-color: white;
   }
-  
+
   .accordion:after {
-    content: '\002B';
+    content: "\002B";
     color: black;
     font-weight: 500;
     /* font-weight: bold; */
     float: right;
     margin-left: 5px;
   }
-  
+
   .active:after {
     content: "\2212";
     transform: rotate(90deg);
   }
-  
+
   .panel {
     display: block;
     margin-left: 4.5rem;
@@ -572,10 +643,9 @@ span{
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     /* white-space:break-spaces; */
-    
   }
 
-  .panel a{
+  .panel a {
     font-family: jost_light;
     display: block;
     margin: 50px 20px 50px 20px;
@@ -583,31 +653,28 @@ span{
     color: black;
     font-weight: 400;
     font-size: 2.3rem;
-
   }
   .panel a span {
     text-underline-offset: 12px;
   }
 
-  .social{
+  .social {
     align-items: center;
     margin: 30px;
     margin-right: 40px;
     font-size: 60px;
     color: black;
   }
-  .insta{
+  .insta {
     margin-left: 100px;
   }
-  .pin{
+  .pin {
     margin-left: 300px;
   }
-  .socialmedia{
+  .socialmedia {
     margin-top: 100px;
   }
 
-
-  
   .mobile-footer {
     margin-top: 100px;
     display: flex;
@@ -616,7 +683,7 @@ span{
     text-align: center;
     margin-bottom: 100px;
   }
-  
+
   .mobile-footer ul {
     display: flex;
     justify-content: center;
@@ -625,11 +692,11 @@ span{
     margin-bottom: 10px;
     /* gap: 40px; */
   }
-  
+
   .mobile-footer ul li {
     margin: 0 10px;
   }
-  
+
   .mobile-language {
     font-family: jost_light;
     color: black;
@@ -644,16 +711,16 @@ span{
     text-decoration: none;
     font-size: 2.5rem;
   }
-  
+
   .mobile-footer .mobile-language .globe-icon {
     color: rgba(5, 4, 4, 0.775);
   }
 
-  footer a{
+  footer a {
     margin-top: 40px;
     text-decoration: none;
   }
-  
+
   .mobile-footer span {
     margin-top: 70px;
     padding-left: 10px;
@@ -662,12 +729,11 @@ span{
     text-underline-offset: 20px;
   }
 
-  .contain{
+  .contain {
     margin-top: 65px;
   }
 
-
-  .nav-hid{
+  .nav-hid {
     display: none;
   }
 
@@ -688,12 +754,12 @@ span{
     font-size: 1.4rem;
   }
 
-  #menu_icon{
+  #menu_icon {
     font-size: 2.5rem;
     margin-left: 5px;
   }
 
-  #search_icon{
+  #search_icon {
     margin-left: 60px;
     font-size: 2.5rem;
   }
